# Animal-Shelter

./: CMakeLists.txt  GUIMain.cpp  GUIMain.h  README.md  dogs.csv  dogs.html  dogswidget.cpp  dogswidget.h  dogswidget.ui  gui.cpp  gui.h  guiUser.cpp  guiUser.h  list.txt  main.cpp
Domain/: Pets.cpp  Pets.h
Repository/: CSVRepo.cpp  CSVRepo.h  File.cpp  File.h  HTMLRepo.cpp  HTMLRepo.h  Repo.cpp  Repo.h  RepoAdoption.cpp  RepoAdoption.h
Service/: service.cpp  service.h
UI/: ui.cpp  ui.h
exceptions/: exceptions.h
validation/: validator.cpp  validator.h
